@@ -4,6 +4,7 @@ CONFIG_RULES
 AC_SET_BUILDTOP
 WITH_NETLIB
 AC_HAVE_HEADERS(unistd.h)
+AC_HEADER_CHECK(string.h,AC_DEFINE(USE_STRING_H))
 KRB_INCLUDE
 WITH_KRB5ROOT
 AC_CONST
